--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cyberforge-webshield-frontend",
+  "name": "cyberforge-webshield",
   "private": true,
   "version": "1.0.0",
   "scripts": {
